volexc/tests/ui/parse_unclosed_map.out
Error: found ';' expected '}'
   ╭─[ parse_unclosed_map.vol:3:21 ]
   │
 3 │     bar: {string:u32;
   │                     ┬  
   │                     ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: '}'
───╯